--- a/Movies/movies.css
+++ b/Movies/movies.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(11, 3, 32);
+  background-color: #0b0320;
 }
 
 body {
